--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,11 @@ section {
   border-radius: 50%;
 }
 
+button{
+  max-width: 150px;
+  border-radius: 10%;
+}
+button:hover {
+  background-color: rgb(151, 151, 244);
+  
+}
